# versi

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.cargo/: audit.toml
.github/workflows/: ci.yml  release-prepare.yml  release-publish.yml  release.yml
assets/: AppIcon.icns  Info.plist  fnm-ui.desktop
crates/fnm-ui/: Cargo.toml
crates/fnm-ui/src/: theme.rs
crates/fnm-ui/src/views/: main_view.rs  onboarding.rs
crates/fnm-ui/src/widgets/: install_modal.rs  version_list.rs
crates/versi/: Cargo.toml  build.rs
crates/versi-backend/src/: lib.rs  traits.rs  types.rs
crates/versi-core/: Cargo.toml
crates/versi-core/src/: auto_update.rs  backend.rs  client.rs  detection.rs  lib.rs  provider.rs  update.rs
crates/versi-core/src/commands/: mod.rs
crates/versi-fnm/: Cargo.toml
crates/versi-fnm/src/: backend.rs  detection.rs  lib.rs  update.rs  version.rs
crates/versi-nvm/: Cargo.toml
crates/versi-nvm/src/: backend.rs  client.rs  detection.rs  error.rs  lib.rs  provider.rs  update.rs  version.rs
crates/versi-platform/src/: environment.rs  lib.rs  paths.rs  wsl.rs
crates/versi-shell/: Cargo.toml
crates/versi-shell/src/: detect.rs  verify.rs
crates/versi/src/: app.rs  cache.rs  icon.rs  logging.rs  main.rs  message.rs  settings.rs  single_instance.rs  state.rs  theme.rs
crates/versi/src/app/: auto_update.rs  bulk_operations.rs  environment.rs  init.rs  mod.rs  onboarding.rs  operations.rs  platform.rs  tray_handlers.rs  versions.rs  window.rs
crates/versi/src/state/: environment.rs  main.rs  onboarding.rs  operations.rs  ui.rs
crates/versi/src/theme/: mod.rs
crates/versi/src/theme/styles/: buttons.rs
crates/versi/src/views/: about_view.rs  main_view.rs  mod.rs  onboarding.rs  settings_view.rs
crates/versi/src/views/main_view/: banners.rs  header.rs  mod.rs  modals.rs  search.rs
crates/versi/src/widgets/: helpers.rs  install_modal.rs  toast_container.rs  version_list.rs
crates/versi/src/widgets/version_list/: available.rs  filters.rs  group.rs  item.rs  mod.rs
scripts/: install.sh
wix/: license.rtf  main.wxs
