[package]
name = "versi-nvm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
versi-backend = { path = "../versi-backend" }
versi-platform = { path = "../versi-platform" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
which.workspace = true
dirs.workspace = true
reqwest.workspace = true
async-trait.workspace = true
log.workspace = true
