[package]
name = "versi-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
versi-backend = { path = "../versi-backend" }
versi-platform = { path = "../versi-platform" }
tokio.workspace = true
serde.workspace = true
thiserror.workspace = true
dirs.workspace = true
which.workspace = true
log.workspace = true
