[package]
name = "versi"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[build-dependencies]
winresource = "0.1.30"

[dependencies]
versi-backend = { path = "../versi-backend" }
versi-core = { path = "../versi-core" }
versi-fnm = { path = "../versi-fnm" }
versi-nvm = { path = "../versi-nvm" }
versi-shell = { path = "../versi-shell" }
versi-platform = { path = "../versi-platform" }

iced = { version = "0.14.0", features = ["tokio", "image", "svg"] }

tray-icon = "0.21.3"
image = { version = "0.25.9", default-features = false, features = ["png"] }

reqwest.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
dirs.workspace = true
open.workspace = true
log.workspace = true
simplelog.workspace = true
rfd = "0.17.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.2"
zbus = { version = "5.13.2", default-features = false, features = ["blocking-api"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
windows = { version = "0.62.2", features = ["Win32_UI_Shell", "Win32_System_Com", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.3"
objc2-app-kit = { version = "0.3.2", features = ["NSApplication", "NSRunningApplication", "NSDockTile"] }
objc2-foundation = { version = "0.3.2", features = ["NSString"] }
